--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <h1 class="titulo">Prazer, me chamo <span class="destaque">Phelipe Nascimento <br>
                 </span>e sou desenvolvedor.</h1>
             <div class="botoes">
-                <a href="sobre.html" class="link">Sobre</a>
-                <a href="formacao.html" class="link">Formação & Idiomas</a>
-                <a href="portifolio.html" class="link">Portfólio</a>
-                <a href="contato.html" class="link">Contato</a>
+                <a href="pages/sobre.html" class="link">Sobre</a>
+                <a href="pages/formacao.html" class="link">Formação & Idiomas</a>
+                <a href="pages/portifolio.html" class="link">Portfólio</a>
+                <a href="pages/contato.html" class="link">Contato</a>
             </div>
         </div>
     </div>
