--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -24,7 +24,7 @@
             <h1 class="titulo">Sobre mim<h1>
                     <h2 class="texto-sobre">Sou estudante de Análise e Desenvolvimento de Sistemas e tenho contato com
                         tecnologia desde os meus 10 anos de idade
-                        quando ganhei meu primeiro computador do meu pai, inicialmente era apaixonado pela parte de
+                        quando ganhei meu primeiro computador da minha mãe e meu pai, inicialmente era apaixonado pela parte de
                         hardware mas com o tempo conheci
                         o desenvolvimento front-end e back-end, hoje sigo estudando para me aprimorar em ambas as
                         tecnologias.
